ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  ingress-name
  namespace: minikube-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app:  ingress-app
spec:
  rules:
  - http:
      paths: 
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-service-name
            port:
              number: 80
      - path: /apache
        pathType: Prefix
        backend:
          service:
            name: apache-service-name
            port:
              number: 80
